--- a/src/app/contact/contact-detail/contact-detail.component.html
+++ b/src/app/contact/contact-detail/contact-detail.component.html
@@ -39,7 +39,7 @@
     <td style="text-align: center">{{i + 1}}</td>
     <td>{{contact.name != null ? contact.name : "" }}</td>
     <td>{{contact.email != null ? contact.email : ""}}</td>
-    <td style="text-align: center">{{contact.officePhoneNumber != null ? contact.officePhoneNumber  : ""}} ({{contact.countryCode}})</td>
+    <td style="text-align: center">{{contact.officePhoneNumber != null ? contact.officePhoneNumber  : ""}}</td>
     <td style="text-align: center">{{contact.mobilePhoneNumber != null ? contact.mobilePhoneNumber : ""}}</td>
     <td style="text-align: center">{{contact.role != null ? contact.role : ""}}</td>
     <td>{{contact.note != null ? contact.note : ""}}</td>
