--- a/src/app/site/site-list/site-list.component.html
+++ b/src/app/site/site-list/site-list.component.html
@@ -85,7 +85,7 @@
       <td>{{site.configure}}</td>
       <td>{{site.configureKr}}</td>
       <td style="text-align: center">
-        <button style="margin: 5px" class="btn btn-outline-primary" [routerLink]="['/site/edit/' + site.id]">Edit</button>
+        <button style="margin: 5px" class="btn btn-outline-primary" [routerLink]="['/site/detail/' + site.id]">Detail</button>
       </td>
     </tr>
   </tbody>
