--- a/src/app/line/line-add/line-add.component.html
+++ b/src/app/line/line-add/line-add.component.html
@@ -57,21 +57,21 @@
 
   <div class="row" style="margin: 5px 0px">
     <div class="col-md-2">
-      <label style="font-weight: bold">Device IP</label>
+      <label style="font-weight: bold">TIP</label>
     </div>
     <div class="col-md-10">
-      <input type="text" class="form-control" formControlName="ipAddress">
+      <quill-editor style="width: 100%;height: 450px" formControlName="tip"></quill-editor>
     </div>
   </div>
 
-  <div class="row" style="margin: 5px 0px">
-    <div class="col-md-2">
-      <label style="font-weight: bold">Ping</label>
-    </div>
-    <div class="col-md-10">
-      <input type="text" class="form-control" formControlName="pingtest">
-    </div>
-  </div>
+<!--  <div class="row" style="margin: 5px 0px">-->
+<!--    <div class="col-md-2">-->
+<!--      <label style="font-weight: bold">Ping</label>-->
+<!--    </div>-->
+<!--    <div class="col-md-10">-->
+<!--      <input type="text" class="form-control" formControlName="pingtest">-->
+<!--    </div>-->
+<!--  </div>-->
 
   <div class="row" style="margin: 5px 0px">
     <div class="col-md-9"></div>
