--- a/src/app/site/site-detail/site-detail.component.html
+++ b/src/app/site/site-detail/site-detail.component.html
@@ -1,53 +1,16 @@
 <h4>DETAIL SITE</h4>
 <div class="row">
-  <div style="margin: 5px 0px" class="col-md-6">
+  <div style="margin: 5px 0px" class="col-md-10">
     <p><span style="font-weight: bold">Name</span>: {{site.name}}</p>
-    <p><span style="font-weight: bold">GMT</span>: {{site.gmt > 0 ? '+' + site.gmt : site.gmt}}</p>
+    <p><span style="font-weight: bold">Country</span>: {{site.country.countryName}}</p>
     <p><span style="font-weight: bold">Configuration</span>: {{site.configure}}</p>
     <p><span style="font-weight: bold">Configuration Kr</span>: {{site.configureKr}}</p>
     <p><span style="font-weight: bold">Company</span>: {{site.company.name}}</p>
   </div>
-
-
+  <div class="col-md-2">
+    <button style="width: 100%;margin: 5px" class="btn btn-outline-primary" [routerLink]="['/site/edit/' + site.id]">Edit</button>
+  </div>
 </div>
-
-<!--<h5>Contact List</h5>-->
-<!--<div class="row" style="margin-bottom: 5px">-->
-<!--  <div class="col-md-2"></div>-->
-<!--  <div class="col-md-2"></div>-->
-<!--  <div class="col-md-2"></div>-->
-<!--  <div class="col-md-2"></div>-->
-<!--  <div class="col-md-2"></div>-->
-<!--  <div class="col-md-2">-->
-<!--    <button [routerLink]="['/contact/add/' + site.id]" style="width: 100%" class="btn btn-outline-info">Create Contact</button>-->
-<!--  </div>-->
-<!--</div>-->
-<!--<table class="table table-bordered">-->
-<!--  <thead>-->
-<!--    <th style="text-align: center">No.</th>-->
-<!--    <th>Name</th>-->
-<!--    <th>Email</th>-->
-<!--    <th style="text-align: center">Office</th>-->
-<!--    <th style="text-align: center">Mobile</th>-->
-<!--    <th style="text-align: center">Role</th>-->
-<!--    <th>Note</th>-->
-<!--    <th style="text-align: center">Action</th>-->
-<!--  </thead>-->
-<!--  <tbody>-->
-<!--  <tr *ngFor="let contact of site.contactList,  index as i">-->
-<!--    <td style="text-align: center">{{i + 1}}</td>-->
-<!--    <td>{{contact.name != null ? contact.name : ""}}</td>-->
-<!--    <td>{{contact.email != null ? contact.email : ""}}</td>-->
-<!--    <td style="text-align: center">{{contact.office != null ? contact.office : ""}}</td>-->
-<!--    <td style="text-align: center">{{contact.phone != null ? contact.phone : ""}}</td>-->
-<!--    <td style="text-align: center">{{contact.role != null ? contact.role : ""}}</td>-->
-<!--    <td>{{contact.note != null ? contact.note : ""}}</td>-->
-<!--    <td style="text-align: center">-->
-<!--      <button class="btn btn-outline-info" [routerLink]="['/contact/edit/' + contact.id]">Edit</button>-->
-<!--    </td>-->
-<!--  </tr>-->
-<!--  </tbody>-->
-<!--</table>-->
 
 <h5>Line List</h5>
 <div class="row" style="margin-bottom: 5px">
@@ -86,10 +49,51 @@
     <td>{{line.pingtest != null ? line.pingtest : ""}}</td>
     <td style="text-align: center">
       <button class="btn btn-outline-info" [routerLink]="['/line/edit/' + line.id]">Edit</button>
+      <button style="margin: 5px" class="btn btn-outline-danger" (click)="openDialogDelete(line)">Delete</button>
     </td>
   </tr>
   </tbody>
 </table>
+
+<h5>Contact List</h5>
+<div class="row" style="margin-bottom: 5px">
+  <div class="col-md-2"></div>
+  <div class="col-md-2"></div>
+  <div class="col-md-2"></div>
+  <div class="col-md-2"></div>
+  <div class="col-md-2"></div>
+  <div class="col-md-2">
+    <button [routerLink]="['/contact/add/' + site.id]" style="width: 100%" class="btn btn-outline-info">Create Contact</button>
+  </div>
+</div>
+<table class="table table-bordered">
+  <thead>
+    <th style="text-align: center">No.</th>
+    <th>Name</th>
+    <th>Email</th>
+    <th style="text-align: center">Office</th>
+    <th style="text-align: center">Mobile</th>
+    <th style="text-align: center">Role</th>
+    <th>Note</th>
+    <th style="text-align: center">Action</th>
+  </thead>
+  <tbody>
+  <tr *ngFor="let contact of site.contactList,  index as i">
+    <td style="text-align: center">{{i + 1}}</td>
+    <td>{{contact.name != null ? contact.name : ""}}</td>
+    <td>{{contact.email != null ? contact.email : ""}}</td>
+    <td style="text-align: center">{{contact.officePhoneNumber != null ? contact.officePhoneNumber : ""}}</td>
+    <td style="text-align: center">{{contact.mobilePhoneNumber != null ? contact.mobilePhoneNumber : ""}}</td>
+    <td style="text-align: center">{{contact.role != null ? contact.role : ""}}</td>
+    <td>{{contact.note != null ? contact.note : ""}}</td>
+    <td style="text-align: center">
+      <button class="btn btn-outline-info" [routerLink]="['/contact/edit/' + contact.id]">Edit</button>
+
+    </td>
+  </tr>
+  </tbody>
+</table>
+
 
 <div class="row">
   <div class="col-md-2"></div>
