--- a/src/app/line/line-add/line-add.component.html
+++ b/src/app/line/line-add/line-add.component.html
@@ -60,7 +60,7 @@
       <label style="font-weight: bold">TIP</label>
     </div>
     <div class="col-md-10">
-      <quill-editor style="width: 100%;height: 450px" formControlName="tip"></quill-editor>
+      <quill-editor style="width: 100%;height: 250px" formControlName="tip"></quill-editor>
     </div>
   </div>
 
@@ -86,4 +86,4 @@
 </form>
 
 
-<!--{{lineForm.value | json}}-->
+{{lineForm.value | json}}
