--- a/src/app/line/line-edit/line-edit.component.html
+++ b/src/app/line/line-edit/line-edit.component.html
@@ -55,23 +55,15 @@
     </div>
   </div>
 
-  <div class="row" style="margin: 5px 0px">
+  <div class="row" style="margin: 10px 0px">
     <div class="col-md-2">
-      <label style="font-weight: bold">Device IP</label>
+      <label style="font-weight: bold">TIP</label>
     </div>
     <div class="col-md-10">
-      <input type="text" class="form-control" formControlName="ipAddress">
+      <div id="quill-editor" style="width: 100%;height: 250px" formControlName="tip"></div>
     </div>
   </div>
 
-  <div class="row" style="margin: 5px 0px">
-    <div class="col-md-2">
-      <label style="font-weight: bold">Ping</label>
-    </div>
-    <div class="col-md-10">
-      <input type="text" class="form-control" formControlName="pingtest">
-    </div>
-  </div>
 
   <div class="row" style="margin: 5px 0px">
     <div class="col-md-9"></div>
@@ -85,4 +77,4 @@
   </div>
 </form>
 
-<!--{{lineForm.value | json}}-->
+{{lineForm.value | json}}
