--- a/src/app/monitor/monitoring-edit/monitoring-edit.component.html
+++ b/src/app/monitor/monitoring-edit/monitoring-edit.component.html
@@ -23,7 +23,7 @@
       <label style="font-weight: bold">Note</label>
     </div>
     <div class="col-md-10">
-      <quill-editor id="quill-editor" style="width: 100%;height: 250px" formControlName="note"></quill-editor>
+      <div id="quill-editor" style="width: 100%;height: 250px" formControlName="note"></div>
     </div>
   </div>
 
